--- a/index.css
+++ b/index.css
@@ -36,5 +36,49 @@ em,strong{
 }
 
 /* Change the link color to #111 (black) on hover */
-li a:hover {
-  background-color: #FF5D00;
+  li a:hover {
+    background-color: #FF5D00;
+  }
+
+  .content-1 {
+    height: 200px;
+    background-color: #D6E9FE;    /* Light blue */
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row;
+  }
+
+  .content-2 {
+    height: 200px;
+    background-color: #F09A9D;    /* Red */
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: row;
+  }
+
+  .content-3 {
+    height: 200px;
+    background-color: #F5CF8E;    /* Yellow */
+    display: flex;
+  }
+
+  @media (min-width:400px){ /*mobile*/
+    body{
+      background-color: #F09A9D; /* Red */
+      font-size: .8rem;
+    }
+  }
+
+  @media (min-width: 401px) and (max-width: 960px) {
+    body {
+      background-color: #F5CF8E; /* Yellow */
+    }
+  }
+
+  /* Desktop Styles */
+  @media (min-width: 961px) {
+    body {
+      background-color: #B2D6FF; /* Blue */
+      font-size: 1.25rem;
+    }
+  }
